--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script>
       mocha.setup("bdd");
     </script>
-    <script src="arrays.js"></script>
-    <script src="arrays.spec.js"></script>
+    <script src="array-methods.js"></script>
+    <script src="array-methods.spec.js"></script>
     <script>
       mocha.run();
     </script>
